[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The 'Brain games' project consists of five games in which the user determines the parity of a number, the largest common divisor, a prime number, the value of mathematical expressions and a missing number in an arithmetic progression."
authors = ["Artem Pakholkov"]
readme = "README.md"
packages = [{include = "brain_games"}, ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
